Added comments. Fixed bug where backslashes not used as part of escape sequences were treated as being escape characters.

--- a/test/VariableConfig.Test/Escaping.config
+++ b/test/VariableConfig.Test/Escaping.config
@@ -14,4 +14,5 @@
   <test11>${Z}</test11>
   <test12>\${Z}</test12>
   <test13>\\${Z}</test13>
+  <test14>\\server\path</test14>
 </AppConfiguration>
