--- a/src/VariableConfig/VariableConfig.csproj
+++ b/src/VariableConfig/VariableConfig.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.0;net47</TargetFrameworks>
+    <description>VariableConfig is an implementation for Microsoft.Extensions.Configuration that allows you to reference other configuration properties as variables.</description>
+    <Authors>Nathan Ellenfield</Authors>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Copyright>© Nathan Ellenfield. All rights reserved.</Copyright>
+    <PackageLicenseUrl>https://github.com/ellenfieldn/VariableConfig/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/ellenfieldn/VariableConfig</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ellenfieldn/VariableConfig</RepositoryUrl>
+    <PackageReleaseNotes>Initial Beta Release</PackageReleaseNotes>
+    <PackageTags>NetCore net47 Configuration VariableConfig Variable</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
